--- a/hotels.html
+++ b/hotels.html
@@ -42,13 +42,14 @@
         <nav class="navigation">
           <ul class="navigation-main navigation-menu">
             <li class="navigation-main-item">
-              <a href="index.html" class="navigation-main-link" aria-current="page">Главная</a>
+              <a href="index.html" class="navigation-main-link navigation-main-link-current"
+                aria-current="page">Главная</a>
             </li>
             <li class="navigation-main-item">
               <a href="#" class="navigation-main-link">О Седоне</a>
             </li>
             <li class="navigation-main-item">
-              <a href="hotels.html" class="navigation-main-link navigation-main-link-current">Гостиницы</a>
+              <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-main navigation-user">
@@ -64,6 +65,7 @@
             </li>
             <li class="navigation-user-item">
               <button class="button-favorite" type="button">
+                <span class="favorite-counter">12</span>
                 <svg class="favorite-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="18" height="17" fill="none" viewBox="0 0 18 17">
                   <path
@@ -182,11 +184,13 @@
         <section class="hotels container">
           <div class="hotels-controls-wrap">
             <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
-            <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешевые</option>
-              <option value="popular">Сначала популярные</option>
-              <option value="expensive">Сначала дорогие</option>
-            </select>
+            <div class="select">
+              <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешевые</option>
+                <option value="popular">Сначала популярные</option>
+                <option value="expensive">Сначала дорогие</option>
+              </select>
+            </div>
             <ul class="view-buttons-list">
               <li class="view-buttons-item">
                 <a href="#" class="view-button view-button-grid view-button-selected">
