--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </li>
             <li class="navigation-user-item">
               <button class="button-favorite" type="button">
+                <span class="favorite-counter">12</span>
                 <svg class="favorite-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="18" height="17" fill="none" viewBox="0 0 18 17">
                   <path
@@ -210,6 +211,52 @@
           </a>
         </section>
       </footer>
+    </div>
+    <div class="modal-container modal-container-close">
+      <div class="modal modal-search">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть окно поиска гостиницы</span>
+        </button>
+        <section class="modal-content">
+          <h1 class="modal-title">Поиск гостиницы в Седоне</h1>
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="get">
+
+            <span class="modal-label">Дата Заезда:</span>
+            <div class="input-date-wrap">
+              <label for="modal-date" class="input-label">
+                <input type="text" class="duble">
+                <input id="modal-date" type="date" class="modal-input modal-input-date visually-hidden">
+                <span class="custom-calendar"></span>
+              </label>
+            </div>
+
+            <span class="input-tooltip input-tooltip-error">Мы не можем отправить вас в прошлое</span>
+            <label for="modal-date" class="modal-label">Дата Выезда:</label>
+            <div class="input-date-wrap">
+              <input id="modal-date" type="date" class="modal-input modal-input-date">
+            </div>
+            <span class="input-tooltip input-tooltip-succes">На эти даты есть свободные номера. Пока есть.</span>
+
+            <label for="modal-date" class="modal-label">Взрослые:</label>
+            <div class="input-age-wrap">
+              <input id="modal-date" type="number" class="modal-input modal-input-age">
+            </div>
+
+            <div class="input-age-wrap">
+              <label for="modal-date" class="modal-label">Дети:</label>
+            <span class="modal-children-tooltip">
+              <button class="tooltip-toggle" type="button"></button>
+              <span class="tooltip-text tooltip-text-hide">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+            </span>
+            </div>
+
+            <div class="input-age-wrap">
+              <input id="modal-date" type="number" class="modal-input modal-input-age">
+            </div>
+            <button class="button-modal" type="submit">Найти</button>
+          </form>
+        </section>
+      </div>
     </div>
   </body>
 
