--- a/hotels.html
+++ b/hotels.html
@@ -13,8 +13,8 @@
   <body>
     <div class="page-wrapper">
       <header class="page-header container">
-        <a class="header-logo-link" href="index.html" aria-current="page" aria-label="Логотип Седона">
-          <span class="visually-hidden">Логотип Седона</span>
+        <a class="header-logo-link" href="index.html" aria-current="page">
+          <span class="visually-hidden">Логотип Седона.</span>
           <svg class="header-logo-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
             width="140" height="70" fill="none">
             <g clip-path="url(#a)">
@@ -61,7 +61,7 @@
                   <path
                     d="m19.5 18-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87a8 8 0 0 0-8-7.96c-4.4 0-8 3.68-8 8.06a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z" />
                 </svg>
-                <span class="visually-hidden">Поиск</span>
+                <span class="visually-hidden">Поиск.</span>
               </button>
             </li>
             <li class="navigation-user-item">
@@ -74,7 +74,7 @@
                   <path
                     d="M8.9 17a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                 </svg>
-                <span class="visually-hidden">Избранное</span>
+                <span class="visually-hidden">Избранное.</span>
               </button>
             </li>
             <li class="navigation-user-item">
@@ -90,7 +90,7 @@
             <ul class="breadcrumbs-list">
               <li>
                 <a href="index.html" class="breadcrumbs-link breadcrumbs-link-home">
-                  <span class="visually-hidden">Главная</span>
+                  <span class="visually-hidden">Главная.</span>
                   <svg class="breadcrumbs-home-svg" aria-hidden="true" focusable="false"
                     xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
                     <path d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z" />
@@ -103,8 +103,8 @@
               </li>
             </ul>
           </header>
-          <section class="hotels-filter">
-            <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+          <section>
+            <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
             <form action="https://echo.htmlacademy.ru/" class="hotels-filter-form" method="get">
               <fieldset class="filter-group filter-group-pool">
                 <legend class="control">Инфраструктура:</legend>
@@ -192,126 +192,126 @@
           <div class="hotels-controls-wrap">
             <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
             <div class="select">
-              <select class="select-control" aria-label="Сортировка">
+              <select class="select-control" aria-label="Сортировка.">
                 <option value="cheap">Сначала дешевые</option>
                 <option value="popular">Сначала популярные</option>
                 <option value="expensive">Сначала дорогие</option>
               </select>
             </div>
             <ul class="view-buttons-list">
-              <li class="view-buttons-item">
+              <li>
                 <button type="button" class="view-button view-button-grid view-button-selected">
-                  <span class="visually-hidden">Вид плитка</span>
+                  <span class="visually-hidden">Вид плитка.</span>
                 </button>
               </li>
-              <li class="view-buttons-item">
+              <li>
                 <button type="button" class="view-button view-button-card">
-                  <span class="visually-hidden">Вид карточка</span>
+                  <span class="visually-hidden">Вид карточка.</span>
                 </button>
               </li>
-              <li class="view-buttons-item">
+              <li>
                 <button type="button" class="view-button view-button-list">
-                  <span class="visually-hidden">Вид список</span>
+                  <span class="visually-hidden">Вид список.</span>
                 </button>
               </li>
             </ul>
           </div>
           <ul class="hotels-list">
             <li class="hotels-item">
-              <a class="hotel-title" href="#" aria-label="Гостиница Amara Resort & Spa">
+              <a class="hotel-title" href="#">
                 <h3>Amara Resort & Spa</h3>
               </a>
               <a class="hotel-image-link" href="#" tabindex="-1">
                 <img src="images/hotels/amara-resort-spa.jpg" width="300" height="212"
-                  alt="Гостиница Amara Resort & Spa">
+                  alt="Гостиница Amara Resort & Spa.">
               </a>
               <span>Гостиница</span>
               <b class="hotel-costs">От 4000 ₽</b>
               <a class="hotels-more" href="#">Подробнее</a>
               <button class="button button-blue button-to-favorites" type="button">В избранное</button>
               <div class="stars stars-four">
-                <span class="visually-hidden">4 звезды</span>
+                <span class="visually-hidden">4 звезды.</span>
               </div>
               <p class="hotel-rating">Рейтинг: <span>8,5</span></p>
             </li>
             <li class="hotels-item">
-              <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
+              <a class="hotel-title" href="#">
                 <h3>Villas at Poco Diablo</h3>
               </a>
               <a class="hotel-image-link" href="#" tabindex="-1">
                 <img src="images/hotels/villasat-poco-diablo.jpg" width="300" height="212"
-                  alt="Гостиница Villas at Poco Diablo">
+                  alt="Гостиница Villas at Poco Diablo.">
               </a>
               <span>Гостиница</span>
               <b class="hotel-costs">От 5000 ₽</b>
               <a class="hotels-more" href="#">Подробнее</a>
               <button class="button button-in-favorites" type="button">В избранном</button>
               <div class="stars stars-four">
-                <span class="visually-hidden">4 звезды</span>
+                <span class="visually-hidden">4 звезды.</span>
               </div>
               <p class="hotel-rating">Рейтинг: <span>9,2</span></p>
             </li>
             <li class="hotels-item">
-              <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
+              <a class="hotel-title" href="#">
                 <h3>Desert Quail Inn</h3>
               </a>
               <a class="hotel-image-link" href="#" tabindex="-1">
                 <img src="images/hotels/desert-quail-inn.jpg" width="300" height="212"
-                  alt="Гостиница Villas at Poco Diablo">
+                  alt="Гостиница Villas at Poco Diablo.">
               </a>
               <span>Гостиница</span>
               <b class="hotel-costs">От 2500 ₽</b>
               <a class="hotels-more" href="#">Подробнее</a>
               <button class="button button-blue button-to-favorites" type="button">В избранное</button>
               <div class="stars stars-three">
-                <span class="visually-hidden">3 звезды</span>
+                <span class="visually-hidden">3 звезды.</span>
               </div>
               <p class="hotel-rating">Рейтинг: <span>6,9</span></p>
             </li>
             <li class="hotels-item">
               <a class="hotel-title" href="#">
-                <h3 aria-label="Гостиница GreenTree Inn">GreenTree Inn</h3>
+                <h3>GreenTree Inn</h3>
               </a>
               <a class="hotel-image-link" href="#" tabindex="-1">
-                <img src="images/hotels/green-tree-inn.jpg" width="300" height="212" alt="Гостиница GreenTree Inn">
+                <img src="images/hotels/green-tree-inn.jpg" width="300" height="212" alt="Гостиница GreenTree Inn.">
               </a>
               <span>Гостиница</span>
               <b class="hotel-costs">От 1500 ₽</b>
               <a class="hotels-more" href="#">Подробнее</a>
               <button class="button button-blue button-to-favorites" type="button">В избранное</button>
               <div class="stars stars-two">
-                <span class="visually-hidden">2 звезды</span>
+                <span class="visually-hidden">2 звезды.</span>
               </div>
               <p class="hotel-rating">Рейтинг: <span>5,0</span></p>
             </li>
           </ul>
           <ul class="pagination">
-            <li class="pagination-item">
+            <li>
               <a class="pagination-link pagination-current">
                 <span class="pagination-link-text">1</span>
               </a>
             </li>
-            <li class="pagination-item">
+            <li>
               <a href="#" class="pagination-link">
                 <span class="pagination-link-text">2</span>
               </a>
             </li>
-            <li class="pagination-item">
+            <li>
               <a href="#" class="pagination-link">
                 <span class="pagination-link-text">3</span>
               </a>
             </li>
-            <li class="pagination-item">
+            <li>
               <a href="#" class="pagination-link">
                 <span class="pagination-link-text">4</span>
               </a>
             </li>
-            <li class="pagination-item">
+            <li>
               <a href="#" class="pagination-link pagination-more">
                 <span class="pagination-link-text">...</span>
               </a>
             </li>
-            <li class="pagination-item">
+            <li>
               <a href="#" class="pagination-link">
                 <span class="pagination-link-text">10</span>
               </a>
@@ -323,7 +323,7 @@
           <p class="subscribe-hotels-subscription">Только полезная информация и никакого спама,<br>честное
             бойскаутское!</p>
           <form action="https://echo.htmlacademy.ru/" class="subscribe-table" method="post">
-            <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
+            <label class="visually-hidden" for="e-mail">Укажите ваш e-mail.</label>
             <input id="e-mail" class="input-subscribe" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
           </form>
@@ -331,11 +331,11 @@
       </main>
       <footer class="page-footer container">
         <section class="socials">
-          <h2 class="visually-hidden">Список социальных сетей</h2>
+          <h2 class="visually-hidden">Список социальных сетей.</h2>
           <ul class="social-list">
             <li>
               <a class="social-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Ссылка на соцсеть Вконтакте</span>
+                <span class="visually-hidden">Ссылка на соцсеть Вконтакте.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="25" height="15">
                   <path
@@ -346,7 +346,7 @@
             </li>
             <li>
               <a class="social-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Ссылка на соцсеть Телеграмм</span>
+                <span class="visually-hidden">Ссылка на соцсеть Телеграмм.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="18" height="16">
                   <path
@@ -356,7 +356,7 @@
             </li>
             <li>
               <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Ссылка на Ютуб</span>
+                <span class="visually-hidden">Ссылка на Ютуб.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="23" height="18" fill="none">
                   <path
@@ -367,13 +367,13 @@
           </ul>
         </section>
         <section class="phone">
-          <h2 class="visually-hidden">Телефон для связи</h2>
+          <h2 class="visually-hidden">Телефон для связи.</h2>
           <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
         <section class="academy-logo">
-          <h2 class="visually-hidden">Логотип HTML Academy</h2>
+          <h2 class="visually-hidden">Логотип HTML Academy.</h2>
           <a class="academy-link" href="https://htmlacademy.ru/">
-            <span class="visually-hidden">Ссылка на HTML Academy</span>
+            <span class="visually-hidden">Ссылка на HTML Academy.</span>
             <svg class="html-logo-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
               width="115" height="34">
               <path
