--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32×32" href="images/favicon.png">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Седона</title>
@@ -13,8 +13,8 @@
   <body>
     <div class="page-wrapper">
       <header class="page-header container">
-        <a class="header-logo-link" href="index.html" aria-current="page" aria-label="Логотип Седона">
-          <span class="visually-hidden">Логотип Седона</span>
+        <a class="header-logo-link" href="index.html" aria-current="page">
+          <span class="visually-hidden">Логотип Седона.</span>
           <svg class="header-logo-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
             width="140" height="70" fill="none">
             <g clip-path="url(#a)">
@@ -55,17 +55,17 @@
             </li>
           </ul>
           <ul class="navigation-main navigation-user">
-            <li class="navigation-user-item">
+            <li>
               <button class="button-search" type="button">
                 <svg class="search-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="20" height="20" fill="none" viewBox="0 0 20 20">
                   <path
                     d="m19.5 18-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87a8 8 0 0 0-8-7.96c-4.4 0-8 3.68-8 8.06a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z" />
                 </svg>
-                <span class="visually-hidden">Поиск</span>
+                <span class="visually-hidden">Поиск.</span>
               </button>
             </li>
-            <li class="navigation-user-item">
+            <li>
               <button class="button-favorite" type="button">
                 <span class="favorite-counter">
                   <span class="favorite-counter-text">12</span>
@@ -75,10 +75,10 @@
                   <path
                     d="M8.9 17a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                 </svg>
-                <span class="visually-hidden">Избранное</span>
+                <span class="visually-hidden">Избранное.</span>
               </button>
             </li>
-            <li class="navigation-user-item">
+            <li>
               <a class="want-here" href="#">Хочу сюда!</a>
             </li>
           </ul>
@@ -86,11 +86,11 @@
       </header>
       <main class="main-container main-index">
         <section class="hero">
-          <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
+          <h1 class="visually-hidden">Добро пожаловать в великолепную Седону.</h1>
           <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352" alt="">
         </section>
         <section class="gallery">
-          <h2 class="visually-hidden">Галлерея</h2>
+          <h2 class="visually-hidden">Галлерея.</h2>
           <p class="gallery-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
           <p class="gallery-subscription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="gallery-list">
@@ -100,7 +100,7 @@
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <div class="gallery-item-picture-image">
-                <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город">
+                <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город.">
               </div>
             </li>
             <li class="gallery-item gallery-item-light">
@@ -117,7 +117,7 @@
             </li>
             <li class="gallery-item-picture">
               <div class="gallery-item-picture-image">
-                <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
+                <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола.">
               </div>
               <div class="gallery-item-wrap">
                 <h3>Там есть<br>мост дьявола</h3>
@@ -145,7 +145,7 @@
           </ul>
         </section>
         <section class="appointment">
-          <h2 class="visually-hidden">Поиск гостиницы</h2>
+          <h2 class="visually-hidden">Поиск гостиницы.</h2>
           <p class="appointment-title">Заинтересовались?</p>
           <p class="appointment-subscription">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
@@ -156,7 +156,7 @@
           <p class="subscribe-index-subscription">Только полезная информация и никакого спама,<br>честное бойскаутское!
           </p>
           <form class="subscribe-table" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
+            <label class="visually-hidden" for="e-mail">Укажите ваш e-mail.</label>
             <input class="input-subscribe" id="e-mail" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
           </form>
@@ -164,11 +164,11 @@
       </main>
       <footer class="page-footer container">
         <section class="socials">
-          <h2 class="visually-hidden">Список социальных сетей</h2>
+          <h2 class="visually-hidden">Список социальных сетей.</h2>
           <ul class="social-list">
             <li>
               <a class="social-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Ссылка на соцсеть Вконтакте</span>
+                <span class="visually-hidden">Ссылка на соцсеть Вконтакте.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="25" height="15">
                   <path
@@ -179,7 +179,7 @@
             </li>
             <li>
               <a class="social-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Ссылка на соцсеть Телеграмм</span>
+                <span class="visually-hidden">Ссылка на соцсеть Телеграмм.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="18" height="16">
                   <path
@@ -189,7 +189,7 @@
             </li>
             <li>
               <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Ссылка на Ютуб</span>
+                <span class="visually-hidden">Ссылка на Ютуб.</span>
                 <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="23" height="18" fill="none">
                   <path
@@ -200,13 +200,13 @@
           </ul>
         </section>
         <section class="phone">
-          <h2 class="visually-hidden">Телефон для связи</h2>
+          <h2 class="visually-hidden">Телефон для связи.</h2>
           <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
         <section class="academy-logo">
-          <h2 class="visually-hidden">Логотип HTML Academy</h2>
+          <h2 class="visually-hidden">Логотип HTML Academy.</h2>
           <a class="academy-link" href="https://htmlacademy.ru/">
-            <span class="visually-hidden">Ссылка на HTML Academy</span>
+            <span class="visually-hidden">Ссылка на HTML Academy.</span>
             <svg class="html-logo-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
               width="115" height="34">
               <path
@@ -219,7 +219,7 @@
     <div class="modal-container"> <!-- Чтобы показать модальное окно, добавить класс modal-container-show-->
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
-          <span class="visually-hidden">Закрыть окно поиска гостиницы</span>
+          <span class="visually-hidden">Закрыть окно поиска гостиницы.</span>
         </button>
         <section class="modal-content">
           <h1 class="modal-title">Поиск гостиницы в Седоне</h1>
@@ -227,7 +227,7 @@
             <label class="modal-label" for="input-date-in">Дата Заезда:</label>
             <div class="input-date-label">
               <input class="modal-input modal-input-date" id="input-date-in"
-                aria-label="Укажите дату заезда в гостинницу" name="modal-input-date-in" type="text" maxlength="30"
+                aria-label="Укажите дату заезда в гостинницу." name="modal-input-date-in" type="text" maxlength="30"
                 placeholder="Укажите дату" required>
               <button class="button-calendar" type="button"></button>
             </div>
@@ -236,7 +236,7 @@
             <label class="modal-label" for="input-date-out">Дата Выезда:</label>
             <div class="input-date-label">
               <input class="modal-input modal-input-date" id="input-date-out"
-                aria-label="Укажите дату выезда из гостиницы" name="modal-input-date-out" type="text" maxlength="30"
+                aria-label="Укажите дату выезда из гостиницы." name="modal-input-date-out" type="text" maxlength="30"
                 placeholder="Укажите дату" required>
               <button class="button-calendar" type="button"></button>
             </div>
@@ -246,13 +246,13 @@
             <div class="modal-wrap-age">
               <div class="input-age-label">
                 <div class="button-wrap">
-                  <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых"
+                  <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых."
                     type="button"></button>
                 </div>
-                <input class="modal-input modal-input-age" id="input-age-old" aria-label="Укажите число взрослых людей"
+                <input class="modal-input modal-input-age" id="input-age-old" aria-label="Укажите число взрослых людей."
                   type="number" value="2" required>
                 <div class="button-wrap">
-                  <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых"
+                  <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых."
                     type="button"></button>
                 </div>
               </div>
@@ -269,13 +269,13 @@
                 </div>
                 <div class="input-age-label">
                   <div class="button-wrap">
-                    <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых"
+                    <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых."
                       type="button"></button>
                   </div>
-                  <input class="modal-input modal-input-age" id="input-age-chldren" aria-label="Укажите число детей"
+                  <input class="modal-input modal-input-age" id="input-age-chldren" aria-label="Укажите число детей."
                     type="number" value="2">
                   <div class="button-wrap">
-                    <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых"
+                    <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых."
                       type="button"></button>
                   </div>
                 </div>
